--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.21",
+    "@types/react": "^18.0.21",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3"
   }
 }
